--- a/notebooks/linear/linear.ipynb
+++ b/notebooks/linear/linear.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 140,
    "id": "cff6e2e0-0463-4b11-b086-659a81158b88",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9919b64672a2446f9ae5e931de09f072",
+       "model_id": "90cfdba1fe114426aaf2e7ef7bbb4488",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,11 +72,11 @@
     "    # y = y.reshape(-1, 1)\n",
     "    # y_s = y_s.reshape(-1, 1)\n",
     "    # y_p = y_p.reshape(-1, 1)\n",
-    "    C = lam * (A@B + B@A) + X.T@X \n",
+    "    C = lam * (A@B + B@A) + X_s.T@X_s \n",
     "    # C0 = X.T@X \n",
     "    # z0 = X.T@y\n",
     "   \n",
-    "    z = lam * (A@(X_p.T@y_p) + B@(X_s.T@y_s)) + X.T@y\n",
+    "    z = lam * (A@(X_p.T@y_p) + B@(X_s.T@y_s)) + X_s.T@y_s\n",
     "    W_new = np.linalg.solve(C, z)\n",
     "    \n",
     "    # print(X.shape, y.shape, y_s.shape)\n",
@@ -117,6 +117,7 @@
     "    W_theta = np.deg2rad(W_theta)\n",
     "    W = np.array([W_r*np.cos(W_theta), W_r*np.sin(W_theta)])\n",
     "    y_s, y_p = X_s@W + sigma * np.random.normal(len(X_s)), X_p@W + sigma * np.random.normal(len(X_p))\n",
+    "    W = np.linalg.solve(X_s.T@X_s, X_s.T@y_s)\n",
     "\n",
     "    plt.scatter(-10.*np.ones_like(y_s), y_s, s=8, alpha=0.6, c=\"darkgreen\", marker=\"^\")\n",
     "    plt.text(-10.25, -7.5, r'$y_s$', fontsize=12, ha='left', va='bottom', color='black')\n",
@@ -159,8 +160,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "id": "59a6e033-3091-409b-bebc-7feaea5b1321",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.26.1'"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "e1d590d9-5d46-47a9-acff-add4d3011966",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in /Users/pman0581/miniconda3/envs/metal/lib/python3.11/site-packages (1.26.1)\n",
+      "Collecting numpy\n",
+      "  Using cached numpy-2.2.6-cp311-cp311-macosx_14_0_arm64.whl.metadata (62 kB)\n",
+      "Using cached numpy-2.2.6-cp311-cp311-macosx_14_0_arm64.whl (5.4 MB)\n",
+      "Installing collected packages: numpy\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 1.26.1\n",
+      "    Uninstalling numpy-1.26.1:\n",
+      "      Successfully uninstalled numpy-1.26.1\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "contourpy 1.1.1 requires numpy<2.0,>=1.16; python_version <= \"3.11\", but you have numpy 2.2.6 which is incompatible.\n",
+      "langchain 0.3.15 requires numpy<2,>=1.22.4; python_version < \"3.12\", but you have numpy 2.2.6 which is incompatible.\n",
+      "scipy 1.11.3 requires numpy<1.28.0,>=1.21.6, but you have numpy 2.2.6 which is incompatible.\n",
+      "tensorflow-macos 2.14.0 requires ml-dtypes==0.2.0, but you have ml-dtypes 0.5.1 which is incompatible.\n",
+      "langchain-community 0.3.15 requires numpy<2,>=1.22.4; python_version < \"3.12\", but you have numpy 2.2.6 which is incompatible.\n",
+      "scikit-learn 1.3.2 requires numpy<2.0,>=1.17.3, but you have numpy 2.2.6 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed numpy-2.2.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install --upgrade numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ad1e59-779c-4501-bd64-dbb48dcfbdc2",
    "metadata": {},
    "outputs": [],
    "source": []
