--- a/notebooks/cluster/Untitled.ipynb
+++ b/notebooks/cluster/Untitled.ipynb
@@ -31,10 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "fdf5d017-34ab-4a54-b74e-2326cd82bb44",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pman0581/miniconda3/envs/metal/lib/python3.11/site-packages/torch/_utils.py:831: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "  return self.fget.__get__(instance, owner)()\n"
+     ]
+    }
+   ],
    "source": [
     "dataloader = dp.MNIST().get_dataloader(10000)\n",
     "img, digit = next(iter(dataloader))\n",
@@ -326,8 +335,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "049b3e84-6466-4294-a9d6-112db059b53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features0.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ca50c8-a391-42ba-a900-c05737f61ed8",
    "metadata": {},
    "outputs": [],
    "source": []
