--- a/practice/dit-test.ipynb
+++ b/practice/dit-test.ipynb
@@ -42,6 +42,9 @@
     "import datapipe as dp\n",
     "import classifier as cls\n",
     "\n",
+    "JSON = \"../data/ImageNet-1k/imagenet_class_index.json\"\n",
+    "root = \"../data/ImageNet-1k/2012\"\n",
+    "\n",
     "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
     "model, vae = dit.load_DiT(folder=\"../data/ImageNet-1k/DiT-XL-2\", device=device)\n",
     "diffusion = dit.load_diffusion(64)\n",
