--- a/practice/fast-DiT-256.ipynb
+++ b/practice/fast-DiT-256.ipynb
@@ -499,8 +499,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0e7d77ff-b0a6-40a4-b920-2eb4ae5b898f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='mps', index=0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vae.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0d79c073-4492-4fa4-aefd-cdb4eb65050b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.device=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fec61a4a-5663-4342-b9ee-49355faea8ee",
    "metadata": {},
    "outputs": [],
    "source": []
