--- a/practice/classifier.ipynb
+++ b/practice/classifier.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "4a1c2a73-fdbb-41a7-aa42-6ee819c2e5a7",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "131d49f3-665c-4234-8ca2-7cc8ee5caf12",
    "metadata": {
     "scrolled": true
@@ -143,22 +143,43 @@
     {
      "data": {
       "text/plain": [
-       "0.016458806901357377"
+       "0.01645894846304299"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cls.FID(real, fake)"
+    "cls.FID(real, fake, batch_size=64, device=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "45679c11-1a33-4af0-a32e-b6c0b913ddf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "real.device"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45679c11-1a33-4af0-a32e-b6c0b913ddf1",
+   "id": "1ccf0cea-bf6c-4e61-bff4-bb99405a1c6c",
    "metadata": {},
    "outputs": [],
    "source": []
