--- a/practice/fast-DiT-256.ipynb
+++ b/practice/fast-DiT-256.ipynb
@@ -530,8 +530,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fec61a4a-5663-4342-b9ee-49355faea8ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True^1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "465e99aa-fc84-4569-b775-1cbeb3170199",
    "metadata": {},
    "outputs": [],
    "source": []
