--- a/practice/test_process_batch.ipynb
+++ b/practice/test_process_batch.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc6e35cd5a1c4c80aa977e328a110650",
+       "model_id": "27c68abf79cf490dbe60192dcdff4d69",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,6 +55,7 @@
     "import surgery as ts\n",
     "import surgery_a as tsa\n",
     "import ortho_s as tos\n",
+    "import ascent_descent as tad\n",
     "import csv\n",
     "\n",
     "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
@@ -88,7 +89,7 @@
      "output_type": "stream",
      "text": [
       "Total params:     675.13M\n",
-      "Trainable params: 9.12M  (y: 1.15M, adaLN_last1: 7.97M, final: 0.00M)\n"
+      "Trainable params: 1.15M  (y: 1.15M, adaLN_last0: 0.00M, final: 0.00M)\n"
      ]
     },
     {
@@ -102,63 +103,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d00bda58fd454cc199941e2adc2fc055",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/64 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c058087de4e47c7bc7d8ee65dcb9e0f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/64 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9009866deca94c7b96622527a17998f9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/64 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99bdeb929ce34c6997ede7d60c9ece10",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/64 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75ddd29d70554f7c80477a30bfce9153",
+       "model_id": "2c210d8723ad4995a7fda7f891fc4e90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -173,19 +118,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs:   0%|                                                        | 0/1 [18:04<?, ?it/s]\n"
+      "Epochs:   0%|                                                        | 0/1 [02:56<?, ?it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken by summarize_training is 1.3561 seconds\n"
+      "Time taken by summarize_training is 0.8780 seconds\n"
      ]
     }
    ],
    "source": [
-    "tos.train(model_path, '.', 5, 1, data_path=root, imagenet_json_path=JSON, device=device, freeze_K=1,\\\n",
+    "tad.train(model_path, '.', 1, 1, data_path=root, imagenet_json_path=JSON, device=device, freeze_K=0,\\\n",
     "          log_interval=1, collect_interval=10, **gen_kwargs)"
    ]
   },
