--- a/notebooks/ImageNet/fid.ipynb
+++ b/notebooks/ImageNet/fid.ipynb
@@ -405,8 +405,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "802c1578-f49b-47f4-bc20-f33c35790284",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'n02100236'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import imagenet_maps as im\n",
+    "im.i2w(210, JSON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0809ece2-fda6-4d06-96e5-f7e5b6ad1a21",
    "metadata": {},
    "outputs": [],
    "source": []
